--- a/Main.css
+++ b/Main.css
@@ -1,3 +1,6 @@
+*{
+    font-family: Arial;
+}
 body{
     margin: 0;
     padding: 0;
@@ -24,9 +27,6 @@ body{
     padding: 10px;
     border: 2px solid black;
 }
-*{
-    font-family: Arial;
-}
 #head{
     text-align: center;
     color: white;
@@ -34,6 +34,8 @@ body{
     overflow: auto;
 }
 #news{
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     float: left;
 }
@@ -70,4 +72,15 @@ body{
 }
 #articles{
     border: solid black 2px;
+}
+.def{
+    text-align: center;
+    border: solid black 2px;
+    margin: 10px;
+    padding: 0;
+}
+#title{
+    background-color: grey;
+    margin: 0px;
+    color: white;
 }
