--- a/Main.css
+++ b/Main.css
@@ -7,6 +7,10 @@ body{
     margin: 0;
     padding: 0;
     overflow: auto;
+    background: #228B22;
+}
+.container{
+    margin: auto;
 }
 .grid{
     display: grid;
@@ -98,7 +102,7 @@ body{
     color: black;
 }
 .topNav a.active {
-    background-color: darkgreen;
+    background-color: darkblue;
     color: white;
 }
 #foot1{
@@ -122,7 +126,25 @@ body{
     padding: 0;
 }
 #title{
-    background-color: grey;
+    background-color: #3C3C3C;
     margin: 0;
     color: white;
+}
+.aircraftTitle{
+    width: fit-content;
+    margin: auto;
+    text-align: center;
+    border: solid 3px black;
+    background: white;
+}
+.aircraftTitle h2{
+    margin: 10px;
+}
+.aircraftPicture{
+    width: fit-content;
+    margin: auto;
+}
+.aircraftPicture img{
+    border: solid 3px black;
+    margin: 10px;
 }
