--- a/Main.css
+++ b/Main.css
@@ -7,7 +7,7 @@ body{
     margin: 0;
     padding: 0;
     overflow: auto;
-    background: #228B22;
+    background: #fffde1;
 }
 .container{
     margin: auto;
@@ -102,7 +102,7 @@ body{
     color: black;
 }
 .topNav a.active {
-    background-color: darkblue;
+    background-color: #4e9d25;
     color: white;
 }
 #foot1{
@@ -122,7 +122,7 @@ body{
 .def{
     text-align: center;
     border: solid black 2px;
-    margin: 10px;
+    margin: 50px 170px;
     padding: 0;
 }
 #title{
@@ -133,9 +133,9 @@ body{
 .aircraftTitle{
     width: fit-content;
     margin: auto;
+    margin-top: 60px;
     text-align: center;
     border: solid 3px black;
-    background: white;
 }
 .aircraftTitle h2{
     margin: 10px;
@@ -147,4 +147,13 @@ body{
 .aircraftPicture img{
     border: solid 3px black;
     margin: 10px;
+}
+.aircraftInfo{
+    width: fit-content;
+    margin: auto;
+
+}
+.contentGrid{
+    display: grid;
+    grid-template-columns: auto auto;
 }
